; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/configfs/extr_symlink.c_get_target.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/configfs/extr_symlink.c_get_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }
%struct.config_item = type { i32 }

@LOOKUP_FOLLOW = common dso_local global i32 0, align 4
@LOOKUP_DIRECTORY = common dso_local global i32 0, align 4
@configfs_sb = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i32 0, align 4
@EPERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.path*, %struct.config_item**)* @get_target to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_target(i8* %0, %struct.path* %1, %struct.config_item** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.path*, align 8
  %6 = alloca %struct.config_item**, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.path* %1, %struct.path** %5, align 8
  store %struct.config_item** %2, %struct.config_item*** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @LOOKUP_FOLLOW, align 4
  %10 = load i32, i32* @LOOKUP_DIRECTORY, align 4
  %11 = or i32 %9, %10
  %12 = load %struct.path*, %struct.path** %5, align 8
  %13 = call i32 @kern_path(i8* %8, i32 %11, %struct.path* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %43, label %16

16:                                               ; preds = %3
  %17 = load %struct.path*, %struct.path** %5, align 8
  %18 = getelementptr inbounds %struct.path, %struct.path* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @configfs_sb, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %39

24:                                               ; preds = %16
  %25 = load %struct.path*, %struct.path** %5, align 8
  %26 = getelementptr inbounds %struct.path, %struct.path* %25, i32 0, i32 0
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = call %struct.config_item* @configfs_get_config_item(%struct.TYPE_2__* %27)
  %29 = load %struct.config_item**, %struct.config_item*** %6, align 8
  store %struct.config_item* %28, %struct.config_item** %29, align 8
  %30 = load %struct.config_item**, %struct.config_item*** %6, align 8
  %31 = load %struct.config_item*, %struct.config_item** %30, align 8
  %32 = icmp ne %struct.config_item* %31, null
  br i1 %32, label %38, label %33

33:                                               ; preds = %24
  %34 = load i32, i32* @ENOENT, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %7, align 4
  %36 = load %struct.path*, %struct.path** %5, align 8
  %37 = call i32 @path_put(%struct.path* %36)
  br label %38

38:                                               ; preds = %33, %24
  br label %42

39:                                               ; preds = %16
  %40 = load i32, i32* @EPERM, align 4
  %41 = sub nsw i32 0, %40
  store i32 %41, i32* %7, align 4
  br label %42

42:                                               ; preds = %39, %38
  br label %43

43:                                               ; preds = %42, %3
  %44 = load i32, i32* %7, align 4
  ret i32 %44
}

declare dso_local i32 @kern_path(i8*, i32, %struct.path*) #1

declare dso_local %struct.config_item* @configfs_get_config_item(%struct.TYPE_2__*) #1

declare dso_local i32 @path_put(%struct.path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
